istio/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wallarm-demo
  labels:
    istio-injection: enabled
