istio/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: wallarm-demo
  labels:
    app: httpbin
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
  - name: http
    port: 80
    targetPort: 80
