istio/resources/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
    - httpbin
    - httpbin.local
  gateways:
    - httpbin-gateway
    - mesh
  http:
    - route:
        - destination:
            host: httpbin
            port:
              number: 80
          weight: 100
      mirror:
        host: ${WALLARM_ALB_HOST}
        port:
          number: ${WALLARM_ALB_PORT}
